# spotify-rankings

./: .gitignore  Cargo.toml  compose.yml  devenv.nix
backend/: Cargo.toml
backend/migrations/: 1_sessions.sql  2_songs.sql
backend/src/: error.rs  lib.rs  main.rs  spotify.rs
backend/src/routes/: auth.rs  matchmaking.rs  mod.rs  playlists.rs
migrations/: 0_users.sql
src/: main.rs  spotify.rs
web/: package.json  vite.config.ts
web/src/: app.css
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/api/[...routes]/: +server.ts
web/src/routes/login/: +page.server.ts
web/src/routes/playlists/: +page.svelte
web/src/routes/playlists/[slug]/: +page.svelte  +page.ts  SongCard.svelte
