[package]
name = "spotify-rankings"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
oauth2 = "5.0.0"
rand = "0.9.2"
rand_distr = "0.5.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
skillratings = "0.27.1"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio"] }
time = "0.3.41"
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
